--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "index.js",
   "license": "MIT",
   "dependencies": {
+    "@emoji-mart/data": "^1.0.6",
     "express": "^4.18.1",
     "socket.io": "^4.5.1"
   },
